Ready for implementation

--- a/knn_classifier.ipynb
+++ b/knn_classifier.ipynb
@@ -31,12 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from math import sqrt"
    ]
   },
   {
@@ -515,15 +516,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use this section to place any \"helper\" code for the `knn()` function.\n",
     "\n",
-    "### START CODE HERE ###\n",
+    "def euclideanDistance(row1, row2):\n",
+    "\treturn np.linalg.norm(row1-row2)\n",
     "\n",
-    "### END CODE HERE ###"
+    "def getNeighbors(row_test, data_array, k):\n",
+    "    \n",
+    "    return 0\n",
+    "\n",
+    "def getPrediction():\n",
+    "    return 0"
    ]
   },
   {
@@ -532,15 +539,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def knn(X_true, y_true, X_pred, k=5):\n",
+    "def knn(X_train, y_train, X_test, k=5):\n",
     "    \"\"\"\n",
     "    k-nearest neighbors classifier.\n",
     "    \n",
-    "    :param X_true\n",
+    "    :param X_train\n",
     "        attributes of the groung truth (training set)\n",
-    "    :param y_true\n",
+    "    :param y_train\n",
     "        classes of the groung truth (training set)\n",
-    "    :param X_pred\n",
+    "    :param X_test\n",
     "        attributes of samples to be classified\n",
     "    :param k\n",
     "        number of neighbors to use\n",
@@ -548,6 +555,14 @@
     "        predicted classes\n",
     "    \"\"\"\n",
     "    ### START CODE HERE ### \n",
+    "    data_array = np.concatenate((X, y[:,None]), axis = 1)\n",
+    "\n",
+    "    distances = np.zeros(shape=(len(X_train),1))\n",
+    "\n",
+    "    # Sort all of the records in the training dataset by their distance to the new data.\n",
+    "    for row_test in X_test:\n",
+    "        neighbors = getNeighbors(row_test, data_array, k)\n",
+    "\n",
     "\n",
     "    ### END CODE HERE ### \n",
     "    return y_pred"
