Moved the dataset

--- a/decision_tree_classifier.ipynb
+++ b/decision_tree_classifier.ipynb
@@ -87,7 +87,7 @@
    },
    "outputs": [],
    "source": [
-    "mushrooms_df = pd.read_csv('mushrooms.csv')"
+    "mushrooms_df = pd.read_csv('data/mushrooms.csv')"
    ]
   },
   {
