--- a/decision_tree_classifier.ipynb
+++ b/decision_tree_classifier.ipynb
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -476,7 +476,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "X_train = [[5 2 2 ... 7 4 4]\n [3 3 2 ... 7 4 2]\n [5 3 2 ... 7 4 4]\n ...\n [2 3 2 ... 7 4 4]\n [0 2 8 ... 2 3 1]\n [2 2 4 ... 8 1 2]]\nX_test = [[2 3 9 ... 1 5 0]\n [5 3 8 ... 3 2 3]\n [2 3 3 ... 3 4 0]\n ...\n [3 3 2 ... 7 4 4]\n [2 2 4 ... 7 4 4]\n [2 3 2 ... 7 4 4]]\ny_train = [1 1 1 ... 1 0 0]\ny_test = [1 0 0 ... 1 1 1]\n"
+      "X_train = [[2 2 2 ... 7 4 0]\n [5 3 3 ... 2 5 0]\n [5 2 9 ... 3 2 3]\n ...\n [3 2 2 ... 7 4 2]\n [5 0 3 ... 1 5 4]\n [5 3 9 ... 3 5 1]]\nX_test = [[2 3 6 ... 1 5 0]\n [5 3 9 ... 2 3 3]\n [2 2 4 ... 7 4 2]\n ...\n [5 0 3 ... 3 5 0]\n [5 3 4 ... 3 4 0]\n [0 2 8 ... 2 2 1]]\ny_train = [1 0 0 ... 1 1 0]\ny_test = [0 0 1 ... 0 0 0]\n"
      ]
     }
    ],
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,10 +532,9 @@
     "    Class to represent a node in the tree which stores a list of children nodes and the data beloning to that node.\n",
     "    Data is a subset of the whole data_array.\n",
     "    \"\"\"\n",
-    "    def __init__(self, data, attribute):\n",
+    "    def __init__(self, data=''):\n",
     "        self.data = data\n",
     "        self.children = []\n",
-    "        self.attribute = attribute\n",
     "\n",
     "    def isEmpty(self):\n",
     "        return (self.data is None)\n",
@@ -545,13 +544,6 @@
     "    \n",
     "    def getData(self):\n",
     "        return self.data\n",
-    "    \n",
-    "    def setAttrbute(self, attribute):\n",
-    "        self.attribute = attribute\n",
-    "    \n",
-    "    def getAttribute(self, attribute):\n",
-    "        return self.attribute\n",
-    "\n",
     "\n",
     "    def addChild(self, child):\n",
     "        self.children.append(child)\n",
@@ -559,94 +551,187 @@
     "    def getChildren(self):\n",
     "        return self.children\n",
     "\n",
-    "def giniCoefficient(values):\n",
-    "    \"\"\"Compute Gini coefficient of array of values\"\"\"\n",
-    "    diffsum = 0\n",
-    "    for i, valuesi in enumerate(values[:-1], 1):\n",
-    "        diffsum += np.sum(np.abs(valuesi - values[i:]))\n",
-    "    return diffsum / (len(values)**2 * np.mean(values))\n",
+    "def giniCoefficient(attribute_count):\n",
+    "    \"\"\"\n",
+    "    Compute Gini coefficient of array of values\n",
     "\n",
-    "def bestSplit(data_array):\n",
-    "    gini = []\n",
-    "    for i in range(len(data_array)):\n",
-    "        gini.append(giniCoefficient(X_train[i]))\n",
+    "    :param attribute_count\n",
+    "    Row of T/F values given a unique attribute-value in a column of data_array\n",
+    "\n",
+    "    :return gini \n",
+    "    Gini value of this row\n",
+    "    \"\"\"\n",
+    "    temp = 0\n",
+    "    s = sum(attribute_count)\n",
+    "    for value in attribute_count:\n",
+    "        temp = (- value/s)**2\n",
+    "    gini = 1 - temp\n",
     "    return gini\n",
-    "\n"
+    "\n",
+    "def bestSplit(X_train,y_train):\n",
+    "    # Number of attributes\n",
+    "    n = len(X_train[0]) \n",
+    "    d = len(X_train)\n",
+    "    classes = np.unique(y_train)\n",
+    "    data_array = np.concatenate((X_train, y_train[:,None]), axis = 1)\n",
+    "    # List of calculated gini splits for all attributes\n",
+    "    gini_split_value = []\n",
+    "    \n",
+    "    # Iterate over all attributes to calculate their gsplits\n",
+    "    #i = 2\n",
+    "    for i in range(n):\n",
+    "        # Get i-th column of X_train and combine it with class column\n",
+    "        #column_target = np.vstack((X_train[:,i], y_train))\n",
+    "        unique_attribute = np.unique(X_train[:,i])\n",
+    "        \n",
+    "        # Get count of each ocurrence given an attribute and y_train\n",
+    "        # Row = attributes, Columns = count for class T/F\n",
+    "        unique_attribute_count = np.zeros(shape=(len(unique_attribute),len(classes)))\n",
+    "        # Shady stuff, if you have time FIX DERSOM ATTRIBUTES IKKE ER 0,1,2,3,4,5 BLIR DETTE FEIL\n",
+    "        # F.EKS 0,2,5\n",
+    "        i=0\n",
+    "        for a, c in zip(X_train[:,i],y_train):\n",
+    "            #print(a,c)\n",
+    "            if c == 1:\n",
+    "                index_attr = np.where(unique_attribute == a)[0]\n",
+    "                unique_attribute_count[index_attr,0] += 1\n",
+    "            else:\n",
+    "                index_attr = np.where(unique_attribute == a)[0]\n",
+    "                unique_attribute_count[index_attr,1] += 1\n",
+    "\n",
+    "        #Calculating the gini values for each unique attribute value\n",
+    "        gini_unique_attribute = np.zeros(shape=(len(unique_attribute_count),))\n",
+    "        j = 0\n",
+    "        for row in unique_attribute_count:\n",
+    "            gini_unique_attribute[j] = giniCoefficient(row)\n",
+    "            j += 1\n",
+    "\n",
+    "        # Calculating the split value\n",
+    "        row_sum = np.sum(unique_attribute_count, axis = 1)\n",
+    "        # Count numbers of occurences for all attributes\n",
+    "        tot_sum = np.sum(unique_attribute_count)\n",
+    "        if (len(gini_unique_attribute)==1):\n",
+    "            gini_split_value.append(gini_unique_attribute[0])\n",
+    "\n",
+    "        else:\n",
+    "            sum_gini = 0\n",
+    "            for x,y in zip(row_sum,gini_unique_attribute):\n",
+    "                sum_gini += (y/tot_sum)*x\n",
+    "            gini_split_value.append(sum_gini)\n",
+    "    # Get maximum attribute index\n",
+    "    min_gini= gini_split_value.index(min(gini_split_value))\n",
+    "    return min_gini\n",
+    "\n",
+    "def stopCondition(classes_val):\n",
+    "    counts = classes_val[1]\n",
+    "    len_counts = len(counts)\n",
+    "    if (len_counts==1): \n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "def partitionDataset(data, split):\n",
+    "    indices = np.argsort(data[:, split])\n",
+    "    arr_temp = data[indices] \n",
+    "    subset_dataarray = np.array_split(arr_temp, np.where(np.diff(arr_temp[:,split])!=0)[0]+1)\n",
+    "    # Removing split column from subset_data\n",
+    "    return subset_dataarray\n",
+    "\n",
+    "\n",
+    "def fit(attribute_values, labels):\n",
+    "    \"\"\"\n",
+    "    Function implementing decision tree induction.\n",
+    "    \n",
+    "    :param attribute_values\n",
+    "        list of attribute values\n",
+    "    :param labels\n",
+    "        target column aka the class\n",
+    "    :return\n",
+    "        trained decision tree (model)\n",
+    "    \"\"\"\n",
+    "    attributes = np.arange(len(attribute_values[0])).tolist()\n",
+    "    data_array = np.concatenate((attribute_values, labels[:,None]), axis = 1)\n",
+    "    classes_count = np.unique(labels, return_counts=True)\n",
+    "    root = Node()\n",
+    "\n",
+    "    # If all values of labels is equal\n",
+    "    if stopCondition(classes_count) == True:\n",
+    "            for i in classes_count:\n",
+    "                # Also pretty shady, if there is time, fix\n",
+    "                if(i==0 or i==1):\n",
+    "                        root.setData(i)\n",
+    "                        return root\n",
+    "\n",
+    "    # If there are no more attributes, but still more data in the array \n",
+    "    # You must return the majority value of the classes \n",
+    "    if len(attributes) == 0:\n",
+    "        majority_value = np.argmax(classes_count[1])\n",
+    "        root.set_data(majority_value)\n",
+    "        return root\n",
+    "\n",
+    "    split = bestSplit(attribute_values,labels)\n",
+    "\n",
+    "    # Removing the split value from the arrays\n",
+    "    attributes.pop(split)\n",
+    "    data_array=np.delete(data_array, split, axis=1)\n",
+    "\n",
+    "    for i in range(len(attributes)):\n",
+    "        #Partitioning the data set given a unique attribute value \n",
+    "        X_subset = partitionDataset(data_array,split)\n",
+    "        y_subset = []\n",
+    "        for sub in X_subset:\n",
+    "            y_subset.append(sub[:,-1])\n",
+    "        for j in range(len(X_subset)):\n",
+    "            child = fit(X_subset[j],y_subset[j])\n",
+    "            root.addChild(child)\n",
+    "\n",
+    "    return root"
    ]
   },
   {
+   "source": [
+    "I have tried but I've failed. It never \"removes\" the attribute we are looking at from the data_array array. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0"
+       "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
       ]
      },
      "metadata": {},
-     "execution_count": 55
+     "execution_count": 18
     }
    ],
    "source": [
-    "bestSplit(X_train)"
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "clf = DecisionTreeClassifier(random_state=0)\n",
+    "cross_val_score(clf, X_train, y_train, cv=10)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fit(attributes, target_column):\n",
-    "    \"\"\"\n",
-    "    Function implementing decision tree induction.\n",
-    "    \n",
-    "    :param attributes\n",
-    "        list of attribute values\n",
-    "    :param target_column\n",
-    "        target column aka the class\n",
-    "    :return\n",
-    "        trained decision tree (model)\n",
-    "    \"\"\"\n",
-    "    root = Node()\n",
-    "    data_array = np.concatenate((attributes, target_column[:,None]), axis = 1)\n",
-    "\n",
-    "\n",
-    "    # Making a dictionary for the unique values of each attribute given columns  X_train\n",
-    "    unique_attributes = {}\n",
-    "    for i in range(len(X_array[2])):\n",
-    "        unique_attributes[i] = np.unique(X_train[:,i])\n",
-    "    \n",
-    "    # Use Hunt's algorithm\n",
-    "    \n",
-    "    # Find the best split\n",
-    "\n",
-    "\n",
-    "    \n",
-    "    return classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "{0: array([0, 1, 2, 3, 4, 5]), 1: array([0, 1, 2, 3]), 2: array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9]), 3: array([0, 1]), 4: array([0, 1, 2, 3, 4, 5, 6, 7, 8]), 5: array([0, 1]), 6: array([0, 1]), 7: array([0, 1]), 8: array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11]), 9: array([0, 1]), 10: array([0, 1, 2, 3, 4]), 11: array([0, 1, 2, 3]), 12: array([0, 1, 2, 3]), 13: array([0, 1, 2, 3, 4, 5, 6, 7, 8]), 14: array([0, 1, 2, 3, 4, 5, 6, 7, 8]), 15: array([0]), 16: array([0, 1, 2, 3]), 17: array([0, 1, 2]), 18: array([0, 1, 2, 3, 4]), 19: array([0, 1, 2, 3, 4, 5, 6, 7, 8]), 20: array([0, 1, 2, 3, 4, 5]), 21: array([0, 1, 2, 3, 4, 5, 6])}\n"
-     ]
-    }
-   ],
    "source": [
     "\n",
-    "print(unique_attributes)"
+    "## Prediction/Deduction\n",
+    "\n",
+    "At this moment we should have trained a decision tree (our model). Now we need an algorithm for assigning a class given the attributes and our model.\n",
+    "\n",
+    "**Exercise:**\n",
+    "\n",
+    "Implement an algorithm deducing class given the attributes and the model.\n",
+    "\n",
+    "* `X` is a matrix of attributes of one or more instances for classification."
    ]
   },
   {
@@ -659,19 +744,9 @@
    ]
   },
   {
+   "source": [],
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Prediction/Deduction\n",
-    "\n",
-    "At this moment we should have trained a decision tree (our model). Now we need an algorithm for assigning a class given the attributes and our model.\n",
-    "\n",
-    "**Exercise:**\n",
-    "\n",
-    "Implement an algorithm deducing class given the attributes and the model.\n",
-    "\n",
-    "* `X` is a matrix of attributes of one or more instances for classification."
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
