Ready for delivery

--- a/decision_tree_classifier.ipynb
+++ b/decision_tree_classifier.ipynb
@@ -631,7 +631,13 @@
     "        return False\n",
     "\n",
     "def partitionDataset(data, split):\n",
-    "    indices = np.argsort(data[:, split])\n",
+    "    test = data[:,2]\n",
+    "    unique_values_column = np.unique(data[:,2],axis=0)\n",
+    "    temp = []\n",
+    "    for unique_value in unique_values_column:\n",
+    "        temp.append(np.where(data[:,2]==unique_value))\n",
+    "\n",
+    "    #temp = np.asarray(temp)\n",
     "    arr_temp = data[indices] \n",
     "    subset_dataarray = np.array_split(arr_temp, np.where(np.diff(arr_temp[:,split])!=0)[0]+1)\n",
     "    # Removing split column from subset_data\n",
@@ -653,7 +659,6 @@
     "    data_array = np.concatenate((attribute_values, labels[:,None]), axis = 1)\n",
     "    classes_count = np.unique(labels, return_counts=True)\n",
     "    root = Node()\n",
-    "\n",
     "    # If all values of labels is equal\n",
     "    if stopCondition(classes_count) == True:\n",
     "            for i in classes_count:\n",
@@ -673,11 +678,11 @@
     "\n",
     "    # Removing the split value from the arrays\n",
     "    attributes.pop(split)\n",
-    "    data_array=np.delete(data_array, split, axis=1)\n",
+    "    #data_array=np.delete(data_array, 2, axis=1)\n",
     "\n",
     "    for i in range(len(attributes)):\n",
     "        #Partitioning the data set given a unique attribute value \n",
-    "        X_subset = partitionDataset(data_array,split)\n",
+    "        X_subset = partitionDataset(data_array,3)\n",
     "        y_subset = []\n",
     "        for sub in X_subset:\n",
     "            y_subset.append(sub[:,-1])\n",
